traefik/ingressroute.yml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.app.local.danielr1996.de`) && (PathPrefix(`/`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:                              
    certResolver: letsencrypt
